# sycl_starter

./: CMakeLists.txt  LICENSE  README.md  main_eigen.cc  main_sycl.cc
